# cowork-dispatch

./: .env.example  .gitignore  README.md  SETUP.md  launch.ps1  pyproject.toml
.github/skills/cowork-dispatch/: SKILL.md
src/cowork_dispatch/: config.py  ollama_client.py  server.py
tests/: test_ollama_client.py  test_server.py
