[project]
name = "cowork-dispatch"
version = "0.1.0"
description = "Local MCP server that forwards prompts to Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<0.29",
    "mcp>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[project.scripts]
cowork-dispatch = "cowork_dispatch.server:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
